--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,6 +1,6 @@
 {
   "initial":{
     "title": "SHOPLAZZA THEME EXTENSION",
-    "sub_title": "BASIC TYPE"
+    "sub_title": "{{type}} TYPE"
   }
 }
